src/app/modules/shared-module/components/single-schedule-entity-block/single-schedule-entity-block.component.scss
/*!
 * Copyright (c) 2022 by MILOSZ GILGA <https://miloszgilga.pl> <https://github.com/Milosz08>
 * Silesian University of Technology | Politechnika Śląska
 *
 * File name | Nazwa pliku: single-schedule-entity-block.component.scss
 * Last modified | Ostatnia modyfikacja: 29/05/2022, 18:19
 * Project name | Nazwa Projektu: angular-po-schedule-management-client
 *
 * Klient | Client: <https://github.com/Milosz08/Angular_PO_Schedule_Management_Client>
 * Serwer | Server: <https://github.com/Milosz08/ASP.NET_PO_Schedule_Management_Server>
 *
 * Client for the ASP.NET Core application to manage schedule for sample university. Written with the Angular Framework
 * for generating dynamic web applications. Project for the teaching course "Objected Oriented Programming".
 *
 * Klient dla aplikacji ASP.NET Core służącej do zarządzania planem zajęć uczelni. Napisany przy użyciu frameworka
 * Angular do generowania dynamicznych aplikacji webowych. Projekt wykonany na zajęcia "Programowanie
 * Obiektowe".
 */

.schedule-block-component__container {
    position: absolute;
    width: 100%;
    display: flex;
    flex-direction: column;
    align-items: center;
    padding: 8px;
    border-radius: var(--borderRadius);
    overflow: hidden;
    color: var(--mainBlackColor);
    .schedule-block__anchor-element {
        text-decoration: underline;
        &.anchor--disable-events {
            pointer-events: none;
            text-decoration: initial;
        }
        &.group-alias__anchor-element {
            display: block;
        }
    }
    .schedule-block__occur-container {
        margin-top: 5px;
        width: 100%;
        text-align: center;
    }
    &:hover {
        overflow-y: scroll;
        z-index: 5 !important;
    }
    &::-webkit-scrollbar {
        position: absolute;
        width: 2px;
    }
    &::-webkit-scrollbar-thumb {
        width: 2px;
        height: 10px;
        border-radius: var(--borderRadius);
        background-color: var(--lightGrayColor);
    }
}

.schedule-block-component__layered-button {
    position: absolute;
    right: 10px;
    top: 10px;
    width: 10px;
    height: 10px;
    border-radius: 50%;
    background-color: var(--mainWhiteColor);
}

//----------------------------------------------------------------------------------------------------------------------

@media only screen and (max-width: 1180px) {
    .hide-elements-on-small-devices {
        display: none;
    }
}

@media only screen and (max-width: 775px) {
    .schedule-block-component__layered-button {
        display: none;
    }
}

